cgi is not working

--- a/ash.html
+++ b/ash.html
@@ -29,7 +29,7 @@
 					      this.responseText;
 					    }
 					  };
-					  xhttp.open("GET", "/cgi/ash.cgi", true);
+					  xhttp.open("GET", "/cgi/pwd01.cgi", true);
 					  xhttp.send();
 				}
 	</script>
